# InterferometryApp

./: .gitignore  CMakeLists.txt  Doxyfile  InterferometryApp.sln  InterferometryApp.vcxproj  InterferometryApp.vcxproj.filters  README.md  check-environment.bat  cmake_install.cmake  diagnose.ps1  pch.h  tree.txt
build_test/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  PipelineTest.sln  PipelineTest.vcxproj  PipelineTest.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
docs/html/: _boundary_controller_8cpp.html  _boundary_controller_8h.html  _boundary_controller_8h.js  _boundary_controller_8h_source.html  _boundary_renderer_8cpp.html  _boundary_renderer_8h.html  _boundary_renderer_8h.js  _boundary_renderer_8h_source.html  _child_frm_8cpp.html  _child_frm_8h.html  _child_frm_8h.js  _child_frm_8h_source.html  _class_view_8cpp.html  _class_view_8cpp.js  _class_view_8h.html  _class_view_8h.js  _class_view_8h_source.html  _constants_8h.html  _constants_8h.js  _constants_8h_source.html  _ellipse_boundary_8cpp.html  _ellipse_boundary_8h.html  _ellipse_boundary_8h.js  _ellipse_boundary_8h_source.html  _file_view_8cpp.html  _file_view_8h.html  _file_view_8h.js  _file_view_8h_source.html  _form0_dark_tmp.ps  _form0_tmp.ps  _form1_dark_tmp.ps  _form1_tmp.ps  _fringe_tracer_8cpp.html  _fringe_tracer_8h.html  _fringe_tracer_8h.js  _fringe_tracer_8h_source.html  _image_loader_8cpp.html  _image_loader_8h.html  _image_loader_8h.js  _image_loader_8h_source.html  (+234 more)
include/App/: InterferometryApp.h  Resource.h
include/Common/: Types.h
include/Core/: EllipseBoundary.h  FringeTracer.h  ImageLoader.h  TracingTypes.h
include/GUI/: InterferometryAppDoc.h  InterferometryAppView.h  MainFrm.h
matlab/: algoritm_calck.py  algoritm_test.mlx  tracer_test.py
resources/: InterferometryApp.rc  InterferometryApp.rc2  RDa05008  resource.h
src/App/: InterferometryApp.cpp
src/Core/: BoundaryController.cpp  BoundaryRenderer.cpp  EllipseBoundary.cpp  FringeTracer.cpp  ImageLoader.cpp
src/GUI/: ChildFrm.cpp  InterferometryAppDoc.cpp  InterferometryAppView.cpp  MainFrm.cpp
test_images/: 2a1vl11.zap  A1  BBR1V20.frn  D9.rar  Project.ini  a1vr2.zap  bat2v31.frn  check-this .frn  edit_fringes .frn  morozoff-1c.mtr  morozoff-1c.phs  report.txt  rof111.phs  zeromkc_1.frn
test_images/22/: line_0_points.csv  line_10_approx.csv  line_10_points.csv  line_11_approx.csv  line_11_points.csv  line_12_approx.csv  line_12_points.csv  line_13_approx.csv  line_13_points.csv  line_14_approx.csv  line_14_points.csv  line_15_approx.csv  line_15_points.csv  line_16_points.csv  line_17_approx.csv  line_17_points.csv  line_18_approx.csv  line_18_points.csv  line_1_approx.csv  line_1_points.csv  line_2_approx.csv  line_2_points.csv  line_3_points.csv  line_4_approx.csv  line_4_points.csv  line_5_approx.csv  line_5_points.csv  line_6_approx.csv  line_6_points.csv  line_7_approx.csv  line_7_points.csv  line_8_approx.csv  line_8_points.csv  line_9_approx.csv  line_9_points.csv
test_images/2a1vl11/: line_0_approx.csv  line_0_points.csv  line_10_approx.csv  line_10_points.csv  line_11_approx.csv  line_11_points.csv  line_12_approx.csv  line_12_points.csv  line_13_approx.csv  line_13_points.csv  line_14_approx.csv  line_14_points.csv  line_15_approx.csv  line_15_points.csv  line_16_approx.csv  line_16_points.csv  line_17_approx.csv  line_17_points.csv  line_18_approx.csv  line_18_points.csv  line_19_approx.csv  line_19_points.csv  line_1_approx.csv  line_1_points.csv  line_2_approx.csv  line_2_points.csv  line_3_approx.csv  line_3_points.csv  line_4_approx.csv  line_4_points.csv  line_5_approx.csv  line_5_points.csv  line_6_approx.csv  line_6_points.csv  line_7_approx.csv  line_7_points.csv  line_8_approx.csv  line_8_points.csv  line_9_approx.csv  line_9_points.csv
test_images/A1_results/: line_0_approx.csv  line_0_points.csv  line_10_approx.csv  line_10_points.csv  line_11_approx.csv  line_11_points.csv  line_12_approx.csv  line_12_points.csv  line_13_approx.csv  line_13_points.csv  line_14_approx.csv  line_14_points.csv  line_15_approx.csv  line_15_points.csv  line_16_approx.csv  line_16_points.csv  line_17_approx.csv  line_17_points.csv  line_18_approx.csv  line_18_points.csv  line_1_approx.csv  line_1_points.csv  line_2_approx.csv  line_2_points.csv  line_3_approx.csv  line_3_points.csv  line_4_approx.csv  line_4_points.csv  (+10 more)
tests/PipelineTest/: CMakeLists.txt  PipelineTest.cpp  profile.csv
(+217 files in other folders)
